Refactored the validation